<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="city_names">
        <item>Zihuatanejo, Gro</item>
        <item>Zihuatanejo, Gro</item>
    </string-array>
    <string-array name="brand_filter">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
    </string-array>
    <string-array name="price_filter">
        <item>$300 - $500</item>
        <item>$500 - $800</item>
        <item>$800 - $1000</item>
    </string-array>
    <string-array name="size_filter">
        <item>4.5 to 5.5 inches</item>
        <item>4.5 to 5.5 inches</item>
    </string-array>
    <string name="view_all">view all</string>
    <string name="select_category">Select Category</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="buy_now"><u>Buy now!</u></string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="product_details">Product Details</string>
    <string name="explorer">● Explorer</string>
</resources>