<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_44_dp"
    android:layout_marginEnd="@dimen/margin_20_dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/margin_24_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/clear_button"
            android:layout_width="@dimen/close_button_width"
            android:layout_height="@dimen/close_button_height"
            android:background="@drawable/background_clear_button"
            android:scaleType="centerInside"
            android:src="@drawable/ic_clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filter_options"
            android:textSize="@dimen/biggest_text_size"
            android:fontFamily="@font/mark_pro_bold"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/done_button"
            app:layout_constraintStart_toEndOf="@+id/clear_button"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_done_button"
            android:fontFamily="@font/mark_pro_bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textOff="@string/done"
            android:textOn="@string/done"
            android:textSize="@dimen/biggest_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24_dp"
        android:text="@string/brand"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/biggest_text_size"
        app:fontFamily="@font/mark_pro_bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_marginTop="@dimen/margin_8_dp"
        android:background="@drawable/background_search_view"
        android:entries="@array/brand_filter" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:text="@string/price"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/biggest_text_size"
        app:fontFamily="@font/mark_pro_bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_marginTop="@dimen/margin_8_dp"
        android:background="@drawable/background_search_view"
        android:entries="@array/price_filter" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:text="@string/size"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/biggest_text_size"
        app:fontFamily="@font/mark_pro_bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_marginTop="@dimen/margin_8_dp"
        android:layout_marginBottom="@dimen/margin_44_dp"
        android:background="@drawable/background_search_view"
        android:entries="@array/size_filter" />

</androidx.appcompat.widget.LinearLayoutCompat>